--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <script src="https://kit.fontawesome.com/1ef44b5be1.js" crossorigin="anonymous"></script>
+    <link name="css/javascript" rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+        </nav>
+
+    </header>
     
-    
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  </body>
 </html>
