--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
     <header>
         <nav>
-            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
-            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
-            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
-            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
-            <a><i id="home_icon"class="fa-solid fa-house-user"></i></a>
+            <a><i class="fa-solid fa-house"></i></a>
+            <a><i class="fa-solid fa-user"></i></a>
+            <a><i class="fa-solid fa-diagram-project"></i></a>
+            <a><i class="fa-solid fa-file"></i></a>
+            <a><i class="fa-solid fa-address-book"></i></a>
+            
         </nav>
 
     </header>
