--- a/personal.html
+++ b/personal.html
@@ -20,6 +20,19 @@
         </nav>
 
     </header>
+
+
+    <div class="page">
+        <div class="row py-4 p-4">
+            <div class="col-12 py-4 d-flex justify-content-center">
+                <div class="col-4 box"></div>
+            </div>
+            <div class="col-12 py-4 d-flex justify-content-center">
+                <div class="col-5 box"></div>
+            </div>
+        </div>
+        
+    </div>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
