--- a/personal.html
+++ b/personal.html
@@ -25,10 +25,10 @@
     <div class="page">
         <div class="row py-4 p-4">
             <div class="col-12 py-4 d-flex justify-content-center">
-                <div class="col-4 box"></div>
+                <div class="col-md-4 box col-12"></div>
             </div>
             <div class="col-12 py-4 d-flex justify-content-center">
-                <div class="col-5 box"></div>
+                <div class="col-md-5 box col-12"></div>
             </div>
         </div>
         
