frame photo update

--- a/personal.html
+++ b/personal.html
@@ -25,10 +25,24 @@
     <div class="page">
         <div class="row py-4 p-4">
             <div class="col-12 py-4 d-flex justify-content-center">
-                <div class="col-md-5 box col-12"></div>
+                <div class="col-md-5 box col-12">
+                    
+                    <div class="icons">
+                        <a target="_blank" href="https://github.com/feyruzb"><i class="fa-brands fa-github fa-2xl"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/feyruz/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a target="_blank" href="https://t.me/S1MILARITY"><i class="fa-brands fa-telegram fa-2xl"></i></a>
+                    </div>
+                    <div class="text">
+                    <p class="fs-4">Email: feyruzbaghirov@gmail.com</p>
+                    <p class="fs-4 ">Phone: <span class="number">+36 30 302 8176</span> </p>
+                </div>
+                </div>
             </div>
+
             <div class="col-12 py-4 d-flex justify-content-center">
-                <div class="col-md-4 box col-10"></div>
+                <div class="col-md-4 box col-10">
+                    <img class="img-fluid" src="rest/photo-horizontal.jpg" alt="Feyruz Baghirov">
+                </div>
             </div>
         </div>
         
