--- a/personal.html
+++ b/personal.html
@@ -24,7 +24,7 @@
 
     <div class="page">
         <div class="row py-4 p-4">
-            <div class="col-12 py-4 d-flex justify-content-center">
+            <div class="col-12 pt-4 d-flex justify-content-center">
                 <div class="col-md-5 box col-12">
                     
                     <div class="icons">
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="col-12 py-4 d-flex justify-content-center">
+            <div class="col-12 d-flex justify-content-center">
                 <div class="col-md-4 box col-10">
                     <img class="img-fluid" src="rest/photo-horizontal.jpg" alt="Feyruz Baghirov">
                 </div>
