--- a/personal.html
+++ b/personal.html
@@ -75,6 +75,8 @@
                     </div>
                     <div class="text">
                         <p class="fs-4">Email: feyruzbaghirov@gmail.com</p>
+                        <p class="fs-4">Address: Budapest, Hungary, 1073</p>
+
                         <p class="fs-4 ">Phone: <span class="number">+36 30 302 8176</span> </p>
                     </div>
                 </div>
