huge index page update

--- a/personal.html
+++ b/personal.html
@@ -74,17 +74,11 @@
                                 class="fa-brands fa-telegram fa-2xl"></i></a>
                     </div>
                     <div class="text">
-                        <p class="fs-4">Email: feyruzbaghirov@gmail.com</p>
-                        <p class="fs-4">Address: Budapest, Hungary, 1073</p>
+                        <p class="fs-4">feyruzbaghirov@gmail.com</p>
+                        <p class="fs-4">Budapest, Hungary, 1073</p>
 
-                        <p class="fs-4 ">Phone: <span class="number">+36 30 302 8176</span> </p>
+                        <p class="fs-4 "><span class="number">+36 30 302 8176</span> </p>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-12 d-flex justify-content-center">
-                <div class="col-md-4 box col-10">
-                    <img class="img-fluid" src="rest/photo-horizontal.jpg" alt="Feyruz Baghirov">
                 </div>
             </div>
         </div>
