--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/1ef44b5be1.js" crossorigin="anonymous"></script>
-    <link name="css/javascript" rel="stylesheet" href="rest/style.css">
-    
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/1ef44b5be1.js" crossorigin="anonymous"></script>
+  <link name="css/javascript" rel="stylesheet" href="rest/style.css">
+  <link rel="stylesheet" href="rest/animation.css">
+  <style>html,body{
+    overflow: hidden;
+  }
+  
+  </style>
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="index.html"><i class="fa-solid fa-house"></i></a>
-            <a href="personal.html"><i class="fa-solid fa-user"></i></a>
-            <a href="projects.html"><i class="fa-solid fa-diagram-project"></i></a>
-            <a target="_blank" href="rest/resume.pdf"><i class="fa-solid fa-file"></i></a>
-        </nav>
-    </header>
-    <!-- scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    <script src="rest/script.js"></script>
-  </body>
+
+<body >
+  <header >
+    <nav>
+      <a href="index.html"><i class="fa-solid fa-house"></i></a>
+      <a href="personal.html"><i class="fa-solid fa-user"></i></a>
+      <a href="projects.html"><i class="fa-solid fa-diagram-project"></i></a>
+      <a target="_blank" href="rest/resume.pdf"><i class="fa-solid fa-file"></i></a>
+    </nav>
+  </header>
+  <div class="home_intro">
+    <h1 class="display-3">:\STUDENTS\BAGHIROV FEYRUZ><span class="blinker">&nbsp;</span></h1>
+    <div class="containerSB">
+      <div class="text">HELLO</div>
+    </div>
+    <div class="home_intro__inner text-center">
+    </div>
+    <div class="row">
+    <div class="col-12 d-flex justify-content-center">
+      <div class="col-md-4 box col-10">
+          <img class="img-fluid" src="rest/photo-horizontal.jpg" alt="Feyruz Baghirov">
+      </div>
+      </div>  
+  </div>
+
+  </div>
+  <!-- scripts -->
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+  <script src="rest/animation.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+  crossorigin="anonymous"></script>
+  <script src="rest/script.js"></script>
+</body>
+
 </html>
