random photo selector

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
         <div class="col-md-4 box col-10">
-          <img class="img-fluid" src="rest/photo-horizontal.jpg" alt="Feyruz Baghirov">
+          <img id="photo" class="img-fluid" alt="Feyruz Baghirov">
         </div>
       </div>
     </div>
