--- a/index.html
+++ b/index.html
@@ -30,21 +30,19 @@
     </nav>
   </header>
   <div class="home_intro">
-    <h1 class="display-3">:\<span style="color:lightslategrey ;">STUDENTS</span>\BAGHIROV FEYRUZ><span
+    <h1 class="display-3 mt-5 ">:\<span style="color:lightslategrey ;">STUDENTS</span>\BAGHIROV FEYRUZ><span
         class="blinker">&nbsp;</span></h1>
     <div class="containerSB">
       <div class="text">HELLO</div>
     </div>
-    <div class="home_intro__inner text-center">
-    </div>
+
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
-        <div class="col-md-4 box col-10">
+        <div class="col-md-4 box col-8">
           <img id="photo" class="img-fluid" alt="Feyruz Baghirov">
         </div>
       </div>
     </div>
-
   </div>
   <!-- scripts -->
 
