--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
 
 
     <div class="page">
-        <div class="positional_scroller">
+        <div class="positional_scroller pt-3">
             <div class="scroller" data-speed="fast">
                 <ul class="tag-list scroller__inner">
                     <li>HTML</li>
